Closed Bug 1621502 Opened 5 years ago Closed 10 months ago

SVG (text) - lengthAdjust spacingAndGlyphs stretching glyphs vertically when writing mode vertical

Categories

(Core :: SVG, defect, P3)

Desktop
All
defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox74 --- wontfix
firefox75 --- wontfix
firefox76 --- wontfix
firefox124 --- fixed

People

(Reporter: akshitkrnagpal, Assigned: longsonr)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.132 Safari/537.36

Steps to reproduce:

I tried using lengthAdjust="spacingAndGlyphs" with writing-mode="vertical-lr" on an text element in svg.

Please see the following JSFiddle.
https://jsfiddle.net/akshitkrnagpal/gbrn8y0p/7/

Actual results:

Glyphs got stretched vertically increasing the height of the text.

Expected results:

Glyphs should have stretched horizontally to fill up the space and the height of the text should remain the same.

Setting the component in order to involve the development team. Thanks for reporting!

Component: Untriaged → SVG
OS: Unspecified → All
Product: Firefox → Core
Hardware: Unspecified → Desktop
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attached file testcase 1

Looks like the spacing gets correctly stretched, but the glyphs do not.

Priority: -- → P3

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)

Severity: normal → S3
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Pushed by longsonr@gmail.com: https://hg.mozilla.org/integration/autoland/rev/aef5098ebe04 fix lengthAdjust when applied to vertical text r=jfkthame
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/44253 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Upstream PR merged by moz-wptsync-bot
Regressions: 1899525
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: