Bug 1621502 - fix lengthAdjust when applied to vertical text r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D199797